# ClinicalClaw

./: .env.example  .gitignore  README.md  clinicalclaw：面向医院的模块化临床AI执行与集成平台方案.docx  pyproject.toml  render.yaml  requirements-neuro.txt
docs/: agent-architecture.md  changelog.md  connectors.md  current-state.md  data-contracts.md  dicomweb.md  environment.md  neuro-environment.md  persistence.md  render-deploy.md  review-queue.md  smart-on-fhir.md  week1.md  workflow-engine.md  workflow-families.md
examples/: 09_smart_sandbox_entry.py  10_dicomweb_sandbox_entry.py
scenarios/: diagnostic_prep.json  imaging_qc.json
skills/clinical_report_generator/: SKILL.md
tests/: test_clinicalclaw_api.py  test_clinicalclaw_connectors.py  test_clinicalclaw_console_agent.py  test_clinicalclaw_console_workspace.py  test_clinicalclaw_contracts.py  test_clinicalclaw_demo_workspace.py  test_clinicalclaw_engine_compat.py  test_clinicalclaw_findings_closure.py  test_clinicalclaw_gateway.py  test_clinicalclaw_missed_diagnosis.py  test_clinicalclaw_neuro_proteas.py  test_clinicalclaw_neuro_visualization.py  test_clinicalclaw_persistence.py  test_clinicalclaw_queue_triage.py  test_clinicalclaw_report_generator.py  test_clinicalclaw_reporting.py  test_clinicalclaw_review_queue.py  test_clinicalclaw_screening_gap.py  test_clinicalclaw_smart_launcher.py  test_clinicalclaw_smart_token_e2e.py  test_clinicalclaw_workflow_engine.py  test_integration_parallel.py
workflows/: abnormal_pap_routing.json  actionable_radiology_findings.json  critical_lab_escalation.json  high_risk_referral_triage.json  high_risk_referral_triage_demo_store.json  missed_vertebral_fracture_detection.json  missed_vertebral_fracture_detection_demo_store.json  positive_fit_followup.json  post_discharge_followup.json  suspicious_lung_nodule_followup.json  undiagnosed_hypertension_detection.json  unrecognized_af_detection.json
(+75 files in other folders)
